--- a/project/web/templates/hotels.vm
+++ b/project/web/templates/hotels.vm
@@ -17,7 +17,23 @@
 ##        <h1>Marketing stuff!</h1>
 ##        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet.</p>
 ##        <p><a class="btn btn-lg btn-success" href="/HotelCSS" role="button">Get started today</a></p>
-##    </div>
+##    </div> action="/FindHotelServlet?hotelName=$hotelName" method="get"
+
+<div class="masthead">
+    <nav>
+        <ul class="nav nav-justified">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="/LogoutServlet">Logout</a></li>
+            <li><a id="backLink" href="#" onclick="history.back(-1);">Back</a></li>
+        </ul>
+            <form class="navbar-form navbar-left" >
+                <input type="text" class="form-control" placeholder="Search...">
+            </form>
+
+    </nav>
+</div>
     <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
         <div class="table">
             <table class="table-row-group">
