--- a/project/web/templates/login.vm
+++ b/project/web/templates/login.vm
@@ -18,9 +18,8 @@
         <nav>
             <ul class="nav nav-justified">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="/RegisterServlet">Register</a></li>
-                <li><a href="/LoginServlet">Login</a></li>
-                <li><a href="/HotelServlet">Hotels</a></li>
+                <li><a href="RegisterServlet">Register</a></li>
+                <li><a href="LoginServlet">Login</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
