--- a/project/web/templates/login.vm
+++ b/project/web/templates/login.vm
@@ -27,14 +27,14 @@
     </div>
     <div class="container">
     <form class="form-signin" action="/LoginServlet" method="post" style="width: 300px; margin: 0 auto";">
-        <h2 class="form-signin-heading">Please sign in</h2>
+        <h2 class="form-signin-heading" style="color: inherit;">Please sign in</h2>
     <label for="user" class="sr-only">User Name</label>
     <input type="text" name="user" class="form-control" placeholder="User Name" required autofocus>
     <label for="password" class="sr-only">Password</label>
     <input type="password" name="password" class="form-control" placeholder="Password" required>
     <div class="checkbox">
         <label>
-            <input type="checkbox" value="remember-me"> Remember me
+            <input type="checkbox" value="remember-me" style="color: antiquewhite;"> Remember me
         </label>
     </div>
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
