--- a/project/web/templates/register.vm
+++ b/project/web/templates/register.vm
@@ -3,6 +3,8 @@
 <head>
     <meta charset="US-ASCII">
     <title>Register Page</title>
+    <script src ="js/validateName.js">
+    </script>
 </head>
 <style>
     body  {
@@ -28,8 +30,8 @@
     <form class="form-signin" action="/RegisterServlet" method="post" style="width: 300px; margin: 0 auto";">
     <h1 class="form-signin-heading">Please Register</h1>
     <label for="user" class="sr-only">User Name</label>
-    <input type="text" name="user" class="form-control" placeholder="User Name" required autofocus>
-    <label for="password" class="sr-only">Password</label>
+        <input type="text" name="user" class="form-control" placeholder="User Name" required autofocus>
+   <label for="password" class="sr-only">Password</label>
     <input type="password" name="password" class="form-control" placeholder="Password" required>
     <div class="checkbox">
         <label>
