--- a/project/web/templates/hotels.vm
+++ b/project/web/templates/hotels.vm
@@ -28,11 +28,26 @@
             <li><a href="/LogoutServlet">Logout</a></li>
             <li><a id="backLink" href="#" onclick="history.back(-1);">Back</a></li>
         </ul>
-            <form class="navbar-form navbar-left" >
-                <input type="text" class="form-control" placeholder="Search...">
-            </form>
-
     </nav>
+
+    <div class="container">
+        <form class="form-signin" action="/NameSearch"  style="width: 300px; margin: 0 auto";">
+        <div class="row">
+            <div class="col-sm-6 col-sm-offset-3">
+                <div id="imaginary_container">
+                    <div class="input-group stylish-input-group">
+                        <input type="text" class="form-control"  placeholder="Search" name="hotelname">
+                        <span class="input-group-addon">
+                        <button type="submit">
+                            <span class="glyphicon glyphicon-search"></span>
+                        </button>
+                    </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+    </div>
 </div>
     <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
         <div class="table">
