--- a/project/web/templates/hotels.vm
+++ b/project/web/templates/hotels.vm
@@ -16,7 +16,7 @@
 ##    <div class="jumbotron">
 ##        <h1>Marketing stuff!</h1>
 ##        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet.</p>
-##        <p><a class="btn btn-lg btn-success" href="/HotelCSS" role="button">Get started today</a></p>
+##        <p><a class="btn btn-lg btn-success" href="/ShowHotelsServlet" role="button">Get started today</a></p>
 ##    </div> action="/FindHotelServlet?hotelName=$hotelName" method="get"
 
 <div class="masthead">
