--- a/project/web/templates/welcome_page.vm
+++ b/project/web/templates/welcome_page.vm
@@ -32,6 +32,7 @@
     </div>
 ##    <li><a href="Welcome user$username">Add Review</a></li>
 ##    <p align="center">Welcome $username </p>
+    <p align="center"><a class="btn btn-lg btn-success" href="/ShowSaveHotelsServlet" role="button">Show Saved hotels</a></p>
     <p align="center"><a class="btn btn-lg btn-success" href="/ShowHotelsServlet" role="button">Show Hotels</a></p>
 
 
