--- a/project/web/templates/header.vm
+++ b/project/web/templates/header.vm
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="">TravelHelper.com</a>
+            <a class="navbar-brand" href="/LoginServlet">TravelHelper.com</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
