--- a/project/web/templates/register.vm
+++ b/project/web/templates/register.vm
@@ -3,7 +3,7 @@
 <head>
     <meta charset="US-ASCII">
     <title>Register Page</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/main.css">
+    #include("web/templates/title-macro.vm")
     <script src="/static/public/js/validateName.js">
     </script>
 </head>
@@ -14,6 +14,7 @@
     }
 </style>
 <body>
+    #include("web/templates/header.vm")
 <div class="container">
     <h1 class="form-signin-heading">Please Register</h1>
     <form class="login-form" action="/RegisterServlet" method="post">
