--- a/project/web/templates/title-macro.vm
+++ b/project/web/templates/title-macro.vm
@@ -1,9 +1,9 @@
 
+<link rel="stylesheet" type="text/css" href="/static/css/main.css">
 <script type="text/javascript" src="//code.jquery.com/jquery-1.12.4.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
 
 ##<link rel="stylesheet" href="https://unpkg.com/purecss@0.6.1/build/pure-min.css">
-##<link rel="stylesheet" type="text/css" href="/static/css/main.css">
 ##<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 ##<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.13/css/jquery.dataTables.min.css">
 ##
