--- a/project/web/templates/reviews.vm
+++ b/project/web/templates/reviews.vm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    #include("web/templates/title-macro.vm")
+    #include("web/templates/header.vm")
 </head>
 <style>
     body {
@@ -10,9 +10,15 @@
     }
 </style>
 <body>
-    #include("web/templates/header.vm")
+    #include("web/templates/nav-bar.vm")
 
 <div class="content-wrapper">
+    <div class="row">
+        <a type="button" class="btn btn-default" href="AddReview?hotelId=$hotelId">Add Review</a>
+        <a type="button" class="btn btn-default" href="ModifyReview?hotelId=$hotelId">Modify Reviews</a>
+    </div>
+    <br>
+
     <table id="reviews-table" class="display" cellspacing="0" width="100%">
         <thead style="font: 200">
         <tr class="thead">
