--- a/project/web/templates/register.vm
+++ b/project/web/templates/register.vm
@@ -3,7 +3,7 @@
 <head>
     <meta charset="US-ASCII">
     <title>Register Page</title>
-    #include("web/templates/title-macro.vm")
+    #include("web/templates/header.vm")
     <script src="/static/public/js/validateName.js">
     </script>
 </head>
@@ -14,7 +14,7 @@
     }
 </style>
 <body>
-    #include("web/templates/header.vm")
+    #include("web/templates/nav-bar.vm")
 <div class="container">
     <h1 class="form-signin-heading">Please Register</h1>
     <form class="login-form" action="/RegisterServlet" method="post">
@@ -26,6 +26,7 @@
         <input type="password" name="password" class="form-control" placeholder="Password" required>
         <p></p>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+        <button class="btn btn-lg btn-primary btn-block" onclick="location.href = 'LoginServet';">Login</button>
     </form>
 </div>
 </body>
