--- a/project/web/templates/welcome_page.vm
+++ b/project/web/templates/welcome_page.vm
@@ -3,6 +3,7 @@
 <head>
     <meta charset="US-ASCII">
     <title>Login Page</title>
+    #include("web/templates/header.vm")
 </head>
 <style>
     body {
@@ -12,7 +13,7 @@
     }
 </style>
 <body>
-    #include("web/templates/header.vm")
+    #include("web/templates/nav-bar.vm")
 
 <br>
 <br>
