--- a/project/web/templates/register.vm
+++ b/project/web/templates/register.vm
@@ -15,19 +15,21 @@
 </style>
 <body>
     #include("web/templates/nav-bar.vm")
-<div class="container">
-    <h1 class="form-signin-heading">Please Register</h1>
-    <form class="login-form" action="/RegisterServlet" method="post">
-        <label for="user" class="sr-only">User Name</label>
-        <input type="text" name="user" class="form-control" placeholder="User Name" required autofocus>
+<div class="content-wrapper">
+    <div class="container">
+        <h1 class="form-signin-heading">Please Register</h1>
+        <form class="login-form" action="/RegisterServlet" method="post">
+            <label for="user" class="sr-only">User Name</label>
+            <input type="text" name="user" class="form-control" placeholder="User Name" required autofocus>
 
-        <p></p>
-        <label for="password" class="sr-only">Password</label>
-        <input type="password" name="password" class="form-control" placeholder="Password" required>
-        <p></p>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
-        <button class="btn btn-lg btn-primary btn-block" onclick="location.href = 'LoginServet';">Login</button>
-    </form>
+            <p></p>
+            <label for="password" class="sr-only">Password</label>
+            <input type="password" name="password" class="form-control" placeholder="Password" required>
+            <p></p>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+            <button class="btn btn-lg btn-primary btn-block" onclick="location.href = 'LoginServet';">Login</button>
+        </form>
+    </div>
 </div>
 </body>
 </html>
