--- a/project/web/templates/welcome_page.vm
+++ b/project/web/templates/welcome_page.vm
@@ -4,6 +4,8 @@
     <meta charset="US-ASCII">
     <title>Login Page</title>
     #include("web/templates/header.vm")
+    <script src="http://maps.google.com/maps/api/js?sensor=false&key=AIzaSyCCMp90qQY3JQujKrIxSUO2NuDhlNMOkog"
+            type="text/javascript"></script>
 </head>
 <style>
     body {
@@ -27,7 +29,39 @@
             <a class="btn btn-lg btn-success" href="/ShowHotelsServlet" role="button">Show all hotels</a>
         </p>
     </div>
-</div>
+    <div id="map" style="margin: 0 auto; height: 500px; width: 1000px;">
+    </div>
 
 </body>
+<script type="text/javascript">
+    var locations = [
+        #foreach( $hotel in $hotelData )
+                ["$hotel.get("hotelName")", $hotel.get("latitude"), $hotel.get("longitude")],
+        #end
+    ];
+
+    var map = new google.maps.Map(document.getElementById('map'), {
+        zoom: 2,
+        center: new google.maps.LatLng(34.091369, 9.853741),
+        mapTypeId: google.maps.MapTypeId.ROADMAP
+    });
+
+    var infowindow = new google.maps.InfoWindow();
+
+    var marker, i;
+
+    for (i = 0; i < locations.length; i++) {
+        marker = new google.maps.Marker({
+            position: new google.maps.LatLng(locations[i][1], locations[i][2]),
+            map: map
+        });
+
+        google.maps.event.addListener(marker, 'click', (function(marker, i) {
+            return function() {
+                infowindow.setContent(locations[i][0]);
+                infowindow.open(map, marker);
+            }
+        })(marker, i));
+    }
+</script>
 </html>
