--- a/project/web/templates/saveHotel.vm
+++ b/project/web/templates/saveHotel.vm
@@ -55,8 +55,7 @@
             </table>
         </div>
     </div>
-    <p align="center"><a class="btn btn-lg btn-success" href="ClearHotel" role="button">Clear list</a>
-    </p>
+    <a type="button" class="btn btn-default" href="/ClearHotel">Clear list</a>
 </div>
 
 
