--- a/project/web/templates/login.vm
+++ b/project/web/templates/login.vm
@@ -32,8 +32,7 @@
             <p></p>
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
             <p></p>
-            <button class="btn btn-lg btn-primary btn-block" onclick="location.href = 'RegisterServlet';">Register
-            </button>
+            <a class="btn btn-lg btn-primary btn-block" href="RegisterServlet">Register</a>
         </form>
     </div>
 </div>
