--- a/project/web/templates/register.vm
+++ b/project/web/templates/register.vm
@@ -27,7 +27,7 @@
             <input type="password" name="password" class="form-control" placeholder="Password" required>
             <p></p>
             <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
-            <button class="btn btn-lg btn-primary btn-block" onclick="location.href = 'LoginServet';">Login</button>
+            <a class="btn btn-lg btn-primary btn-block" href="LoginServet">Login</a>
         </form>
     </div>
 </div>
