--- a/project/web/templates/hotels.vm
+++ b/project/web/templates/hotels.vm
@@ -16,8 +16,10 @@
 
     #include("web/templates/nav-bar.vm")
 <div class="content-wrapper">
+    <div class="page-header">
+        <h1>$heading</h1>
+    </div>
     <div>
-##        <table class="pure-table data-table-base" id="hotel-table">
         <table id="hotels-table" class="display" cellspacing="0" width="100%">
             <thead>
             <tr>
